# simu83

./: Cargo.toml  LICENSE  README.md  profile_data.prof  pyproject.toml  reinstall_dev.sh
.github/workflows/: CI.yml
src/: assember.py  assembler.py  disassembler.py  lib.rs  main.py  res.txt  rom_reader.py  test.asm
